Modify store link

--- a/ROUNDAROUND/Products_GreenteaSkinCare.html
+++ b/ROUNDAROUND/Products_GreenteaSkinCare.html
@@ -224,7 +224,7 @@
                 </ul>
             </li>
             <li class="group">
-                <div class="mtitle"><a href="store.html">Stores</a></div>
+                <div class="mtitle"><a href="Store.html">Stores</a></div>
             </li>
         </ul>
     </div>
